<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#00BFFF">

    <EditText
        android:id="@+id/EmailText"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:background="@drawable/rounded_corners"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailText" />

    <Button
        android:layout_width="110dp"
        android:layout_height="85dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:onClick="moveShoppingPage"
        app:backgroundTint="#7BC2C8"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="110dp"
        android:layout_height="85dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/round_button"
        android:text="@string/dont_have_an_account_n_register"
        android:onClick="moveRegister"
        android:textColor="@color/black"
        app:backgroundTint="#7BC2C8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />
</androidx.constraintlayout.widget.ConstraintLayout>